commit modificacion github

--- a/mi-funcion.html
+++ b/mi-funcion.html
@@ -7,7 +7,20 @@
     <title>rama secundaria</title>
     <h1>Esta es la segunda rama</h1>
 </head>
+
+<br>
+<br>
 <body>
     <h2>Modificacion de branch en casa</h2>
+    <a href="https://github.com/rusopro/UTNprg2.git" title="Enlase Github"></a>
+    <div>
+        <b>Esto es una fuencion</b>
+        <img src="image.jpg" alt="imagen error">
+    </div>
+    
+
 </body>
 </html>
+
+ def funcion ();
+    
