--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Titulo de repaso de GIT</title>
     segunda linea del archivo
     tercera linea
+    modificaciòn mauro
 </head>
 <body>
     
